feat(ui): update hero section layout and content
- Redesigned hero section for improved layout and readability
- Replaced placeholder text with localized content for target audience
- Updated image display and styling for better visual appeal

--- a/src/ui/hero/hero.html
+++ b/src/ui/hero/hero.html
@@ -1,23 +1,23 @@
-<div class="p-12 lg:p-20 pb-0! text-center bg-linear-to-t from-primary/10 from-10% to-transparent flex flex-col items-center mb-10">
-  <div class="bg-primary-100 dark:bg-primary-400/20 text-primary-700 dark:text-primary-100 p-2 mx-auto mb-6 rounded-full border border-primary-200 dark:border-primary-500/30 px-4 backdrop-blur-sm">
-    🔥 Get started in no time
-  </div>
-  <div class="text-4xl lg:text-5xl text-surface-900 dark:text-surface-0 font-bold mb-1 leading-tight">Highly Customizable</div>
-  <div class="text-4xl lg:text-5xl text-primary font-bold mb-6 leading-tight">Premium Application Template</div>
-  <button pButton type="button" outlined>
-    <span pButtonLabel>Get Started</span>
-  </button>
+<div class="px-12 lg:px-12 pb-0! mb-20 text-center bg-linear-to-t from-primary/10 from-10% to-transparent flex flex-col items-center">
+
+  <h1 class="text-4xl xl:text-5xl font-bold lg:text-surface-900 dark:text-surface-0 my-6 leading-tight!">
+    <span class="block">BuchaRetail</span>
+  </h1>
+
+  <p class=" lg:text-surface-700 dark:text-surface-200 text-xl leading-normal mb-8 max-w-xl lg:max-w-none">
+    Шановні потенційні орендарі, ТОВ ОЛМАКС-2025 надає кілька торгових приміщень для оренди у сучасному популярному форматі STREET RETAIL для роздрібних продажів.
+  </p>
+
+  <a pButton outlined href="mailto:inboxmakc@gmail.com">
+    <span pButtonLabel>Надіслати заявку</span>
+  </a>
+
   <div class="w-full grow flex items-start justify-center rounded-t-3xl mt-12">
-    <div class="overflow-hidden w-full aspect-720/295 max-w-180 rounded-t-3xl shadow-2xl border border-b-0 border-primary-100 dark:border-primary-400/30">
+    <div class="overflow-hidden w-full aspect-720/400 max-w-180 rounded-t-3xl shadow-2xl border border-b-0 border-primary-100">
       <img
-        src="assets/images/hous.png"
-        alt="Image"
-        class="block w-full h-full object-cover object-top rounded-t-3xl dark:hidden"
-      />
-      <img
-        src="https://fqjltiegiezfetthbags.supabase.co/storage/v1/render/image/public/block.images/blocks/hero/hero-product-dark.jpg"
-        alt="Image"
-        class="hidden w-full h-full object-cover object-top rounded-t-3xl dark:block"
+        src="/assets/galleria/IMG_4539.JPG"
+        alt="hero image"
+        class="block w-full h-full object-cover object-center rounded-t-3xl"
       />
     </div>
   </div>
