--- a/src/ui/header/header.html
+++ b/src/ui/header/header.html
@@ -1,14 +1,18 @@
 <div class="bg-surface-0 dark:bg-surface-950">
   <div class="bg-surface-900 text-surface-100 py-4 px-6 lg:px-20 flex justify-between items-center flex-wrap">
-    <div class="font-bold">(050) 999-99-99</div>
-    <div class="inline-flex gap-1 items-center">
-      <span class="hidden lg:flex leading-normal">Libero voluptatum atque exercitationem praesentium provident odit.</span>
-      <a class="text-surface-0 underline font-bold" href="#">Learn More</a>
+    <div class="font-bold"></div>
+    <div class="flex items-center justify-center gap-4">
+      <a
+        href="mailto:inboxmakc@gmail.com"
+        class="flex items-center"
+      >
+        <i class="pi pi-envelope text-lg leading-none mr-4"></i>
+        <span class="text-base font-medium">inboxmakc&#64;gmail.com</span>
+      </a>
     </div>
-    <div class="font-bold">exsample&#64;gmail.com</div>
   </div>
 </div>
-<div class="resize-container-7 bg-surface-50 dark:bg-surface-950">
+<div class="resize-container-7 bg-surface-50 dark:bg-surface-950 ">
   <div class="bg-surface-0 dark:bg-surface-900 py-0 px-12 shadow flex items-center justify-between relative lg:static">
     <div class="flex items-center gap-4">
       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 42 42" fill="none">
@@ -28,7 +32,7 @@
       [hideOnOutsideClick]="true"
       resizeSelector=".resize-container-7"
       [hideOnResize]="true"
-      class="cursor-pointer block lg:hidden text-surface-700 dark:text-surface-100 mt-1"
+      class="cursor-pointer lg:hidden text-surface-700 dark:text-surface-100 min-h-14 flex items-center justify-center"
     >
       <i class="pi pi-bars text-2xl!"></i>
     </a>
@@ -40,23 +44,34 @@
       >
         <li class="h-full">
           <a
+            href="#location"
             class="flex h-full px-0 lg:px-8 py-2 items-center text-surface-900 dark:text-surface-0 lg:hover:bg-surface-100 lg:dark:hover:bg-surface-800 hover:text-primary font-medium transition-colors duration-150 lg:min-h-20"
           >
-            <span>Corporate</span>
+            <span>Розташування</span>
           </a>
         </li>
         <li class="h-full">
           <a
+            href="#features"
             class="flex h-full px-0 lg:px-8 py-2 items-center text-surface-900 dark:text-surface-0 lg:hover:bg-surface-100 lg:dark:hover:bg-surface-800 hover:text-primary font-medium transition-colors duration-150 lg:min-h-20"
           >
-            <span>Resources</span>
+            <span>Характеристики</span>
           </a>
         </li>
         <li class="h-full">
           <a
+            href="#advantages"
             class="flex h-full px-0 lg:px-8 py-2 items-center text-surface-900 dark:text-surface-0 lg:hover:bg-surface-100 lg:dark:hover:bg-surface-800 hover:text-primary font-medium transition-colors duration-150 lg:min-h-20"
           >
-            <span>Pricing</span>
+            <span>Переваги</span>
+          </a>
+        </li>
+        <li class="h-full">
+          <a
+            href="#galleria"
+            class="flex h-full px-0 lg:px-8 py-2 items-center text-surface-900 dark:text-surface-0 lg:hover:bg-surface-100 lg:dark:hover:bg-surface-800 hover:text-primary font-medium transition-colors duration-150 lg:min-h-20"
+          >
+            <span>Галерея</span>
           </a>
         </li>
       </ul>
