--- a/src/ui/features/features.html
+++ b/src/ui/features/features.html
@@ -1,59 +1,89 @@
-<div class="bg-surface-0 dark:bg-surface-950 px-6 md:px-12 xl:px-20 py-20">
-  <div class="flex flex-col-reverse md:flex-row gap-20 items-start">
+<div class="bg-surface-0 dark:bg-surface-950 px-6 md:px-12 xl:px-20 pb-20">
+  <div class="flex flex-col-reverse md:flex-row gap-20 md:items-stretch">
+
     <div class="flex-1 flex flex-col gap-8">
       <div class="flex flex-col gap-4">
-        <h2 class="text-2xl font-bold text-surface-900 dark:text-surface-0 leading-tight">Easy to Use</h2>
-        <p class="text-surface-600 dark:text-surface-0/70 leading-tight">Ac turpis egestas maecenas pharetra convallis posuere morbi leo urna.</p>
+        <h2 class="text-4xl font-bold text-surface-900 dark:text-surface-0 leading-tight">Місце розташування</h2>
+        <p class="text-surface-600 dark:text-surface-0/70 leading-tight">
+          Приміщення розташовані у жвавому коридорному місці
+          </p>
       </div>
 
       <div class="flex flex-col">
-        <div class="flex gap-4 relative h-[100px]">
-          <div class="flex flex-col items-center h-full">
-            <div class="w-10 h-10 bg-surface-50 dark:bg-surface-900 border border-surface-200 dark:border-surface-700 rounded-full flex items-center justify-center">
-              <i class="pi pi-image text-surface-600 dark:text-surface-0/70 text-xl!"></i>
+        <div class="flex gap-4 items-stretch">
+          <div class="flex flex-col items-center self-stretch">
+            <div class="w-10 h-10 shrink-0 bg-surface-50 dark:bg-surface-900 border border-surface-200 dark:border-surface-700 rounded-full flex items-center justify-center">
+              <i class="pi pi-map-marker text-surface-600 dark:text-surface-0/70 text-xl!"></i>
             </div>
             <div class="flex-1 w-px bg-surface-200 dark:bg-surface-700"></div>
           </div>
           <div class="flex flex-col gap-1">
-            <div class="font-medium text-surface-900 dark:text-surface-0 leading-tight">Create a wireframe</div>
-            <span class="leading-normal text-surface-500 dark:text-surface-400">
-                                    Imperdiet nulla malesuada pellentesque elit eget gravida. Dui sapien eget mi proin. Eu mi bibendum neque egestas congue quisque egestas diam.
-                                </span>
+            <div class="font-medium text-surface-900 dark:text-surface-0 leading-tight">
+              Адреса
+            </div>
+            <span class="leading-normal text-surface-500 dark:text-surface-400 mb-5">
+              м.Буча, Київська область, вул. Левка Лукяненка, 64/1,64/2, у окремій двоповерховій комерційній будівлі.
+            </span>
           </div>
         </div>
 
-        <div class="flex gap-4 relative h-[100px]">
-          <div class="flex flex-col items-center h-full">
-            <div class="w-10 h-10 bg-surface-50 dark:bg-surface-900 border border-surface-200 dark:border-surface-700 rounded-full flex items-center justify-center">
-              <i class="pi pi-microchip-ai text-surface-600 dark:text-surface-0/70 text-xl!"></i>
+        <div class="flex gap-4 relative items-stretch">
+          <div class="flex flex-col items-center self-stretch">
+            <div class="w-10 h-10 shrink-0 bg-surface-50 dark:bg-surface-900 border border-surface-200 dark:border-surface-700 rounded-full flex items-center justify-center">
+              <i class="pi pi-sort-alt text-surface-600 dark:text-surface-0/70 text-xl!"></i>
             </div>
             <div class="flex-1 w-px bg-surface-200 dark:bg-surface-700"></div>
           </div>
           <div class="flex flex-col gap-1">
-            <div class="font-medium text-surface-900 dark:text-surface-0 leading-tight">Artificial Intelligence</div>
-            <span class="leading-normal text-surface-500 dark:text-surface-400"> Erat pellentesque adipiscing commodo elit at imperdiet dui. Morbi tristique senectus et netus et malesuada fames. </span>
+            <div class="font-medium text-surface-900 dark:text-surface-0 leading-tight">
+              Пішохідний трафік
+            </div>
+            <span class="leading-normal text-surface-500 dark:text-surface-400 mb-5">
+              Місце характеризується жвавим пішохідним і автомобільним трафіком. Поруч розташовані ринок, залізнична станція та інші торгові точки STREET RETAIL. Концентрація торгових площ гарантує стабільний пішоходний трафік.
+            </span>
           </div>
         </div>
 
-        <div class="flex gap-4 relative h-[100px]">
+        <div class="flex gap-4 relative">
           <div class="flex flex-col items-center">
             <div class="w-10 h-10 bg-surface-50 dark:bg-surface-900 border border-surface-200 dark:border-surface-700 rounded-full flex items-center justify-center">
-              <i class="pi pi-globe text-surface-600 dark:text-surface-0/70 text-xl!"></i>
+              <i class="pi pi-shop text-surface-600 dark:text-surface-0/70 text-xl!"></i>
             </div>
           </div>
           <div class="flex flex-col gap-1">
-            <div class="font-medium text-surface-900 dark:text-surface-0 leading-tight">Deploy to Production</div>
-            <span class="leading-normal text-surface-500 dark:text-surface-400"> Adipiscing at in tellus integer. Lorem donec massa sapien faucibus et molestie ac feugiat. </span>
+            <div class="font-medium text-surface-900 dark:text-surface-0 leading-tight">
+              Додаткові можливості
+            </div>
+            <span class="leading-normal text-surface-500 dark:text-surface-400">
+              Перед будівлею є місце для встановлення мобільних трейлерів Street Food. Запрошуємо зацікавлені сторони до співпраці.
+            </span>
           </div>
         </div>
       </div>
     </div>
-    <div class="flex-1">
-      <img
-        src="/assets/images/chalet.png"
-        alt="Image"
-        class="w-full rounded-xl object-cover dark:brightness-[0.76] dark:hue-rotate-35 dark:saturate-[1.8] dark:contrast-[1.4]"
-      />
+
+    <div class="flex-1 hidden md:flex self-stretch overflow-hidden rounded-xl bg-black/5 relative items-center justify-center">
+      <video
+        src="/assets/video/place.mp4"
+        class="absolute h-full w-auto object-contain"
+        autoplay
+        muted
+        controls
+        loop
+        playsinline
+      ></video>
     </div>
+  </div>
+
+  <div class="flex md:hidden justify-center overflow-hidden rounded-xl bg-black/5 mt-10 relative items-center">
+    <video
+      src="/assets/video/place.mp4"
+      class="w-full h-auto max-h-[70vh] object-contain"
+      muted
+      autoplay
+      controls
+      loop
+      playsinline
+    ></video>
   </div>
 </div>
