fix(ui): adjust button width in call-to-actions for consistency
- Updated button width to ensure a uniform and visually balanced layout
- Enhances the overall user interface and maintains alignment with design standards

--- a/src/ui/call-to-actions/call-to-actions.html
+++ b/src/ui/call-to-actions/call-to-actions.html
@@ -5,7 +5,7 @@
       <div class="text-surface-0 font-medium text-4xl leading-tight">Надсилайте свої заявки на поштову адресу inboxmakc&#64;gmail.com</div>
     </div>
     <div class="mt-6 md:mt-0 md:w-auto w-full">
-      <a pButton severity="contrast" [rounded]="true" class="w-fit shrink-0" href="mailto:inboxmakc@gmail.com">
+      <a pButton severity="contrast" [rounded]="true"  class="w-48 shrink-0" href="mailto:inboxmakc@gmail.com">
         <span pButtonLabel>Надіслати заявку</span>
       </a>
     </div>
