--- a/src/ui/hero/hero.html
+++ b/src/ui/hero/hero.html
@@ -16,7 +16,7 @@
     <div class="overflow-hidden w-full aspect-720/400 max-w-180 rounded-t-3xl shadow-2xl border border-b-0 border-primary-100">
       <img
         src="/assets/galleria/IMG_4532.JPG"
-        alt="hero image"
+        alt="facade image"
         class="block w-full h-full object-cover object-center rounded-t-3xl"
       />
     </div>
